# Guiming_ai_agent_for_fate

./: .gitignore  .railwayignore  ARCHITECTURE.md  ENV_SETUP_GUIDE.md  FRONTEND_DEPLOY_GUIDE.md  Procfile  RAILWAY_FRONTEND_SETUP.md  RAILWAY_SETUP.md  analyze_tarot_cards.py  nixpacks.toml  railway.json  railway.py  requirements.txt  setup_railway_vars.sh  start.sh  test_imagery_stream.py  test_rag_comprehensive.py  vercel.json
.firebase/: hosting.ZnJvbnRlbmQ.cache
backend/: analyze_rag_log.py  analyze_rag_queries.py  check_current_model.py  env.example  extract_llm_interactions.py  generate_rag_mapping_doc.py  main.py  pyproject.toml  requirements.txt  switch_to_fastest.py
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/routes/: auth.py  health.py  rag.py  tarot.py  user.py
backend/app/core/: __init__.py  config.py  database.py  model_config.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: chat.py  chunker.py  embedding.py  rag.py  rag_database.py
backend/app/services/tarot/: __init__.py  card_selection.py  pattern_analyzer.py  question_analyzer.py  reading_service.py  significator.py
docs/: 78_degrees_of_wisdom.txt  pkt.txt  rag_research.py
frontend/: .gitignore  .railwayignore  FRONTEND_ARCHITECTURE.md  env.example  next.config.js  nixpacks.toml  package-lock.json  package.json  railway.json  tailwind.config.js  vercel.json
functions/: package-lock.json
scripts/: build_tarot_database.py  compare_tarot_databases.py  download_tarot_content.py  extract_78degrees_cards.py  extract_pkt_cards.py  (+8 more)
(+191 files in other folders)
