[project]
name = "tarot-agent-backend"
version = "1.0.0"
description = "Tarot Agent Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "supabase>=2.8.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "aiohttp>=3.9.1",
    "beautifulsoup4>=4.12.2",
    "httpx>=0.26",
    "websockets>=12.0",
    "gotrue>=2.9.0",
    "postgrest>=0.15.0",
    "storage3>=0.7.0",
    "realtime>=1.0.0",
    "supabase-auth>=2.0.0",
    "supabase-functions>=2.0.0",
    "supafunc>=0.3.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

